Two seperate things are implemented
- Absolute paths are being used now for better structure
- Implemented permission checks for given user
